<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bitmap">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/playerList"
            android:orientation="vertical"
            android:layout_weight="20">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="80"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="40dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="25">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/default_eels"
                    android:id="@+id/boardToggleButton"
                    android:layout_marginBottom="5dp"
                    android:onClick="toggleGameBoard"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button"
                    android:textColor="#ffffff" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/allow_cheats"
                    android:id="@+id/cheatToggleButton"
                    android:layout_marginTop="5dp"
                    android:onClick="toggleCheats"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button"
                    android:textColor="#ffffff" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="75">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start"
                    android:id="@+id/startButton"
                    android:onClick="startGame"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>